feat: change type of searchConfig