@@ -1,7 +1,5 @@
 package registre.mapper;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import registre.dto.CodesListDto;
@@ -10,23 +8,21 @@ import registre.dto.MetadataDto;
 import registre.entity.CodesListEntity;
 import registre.entity.CodesListExternalLinkEntity;
 
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class CodesListMapperTest {
 
     private CodesListMapper codesListMapper;
-    private ObjectMapper objectMapper;
 
     @BeforeEach
     void setUp() {
         codesListMapper = new CodesListMapper(new CodesListExternalLinkMapper());
-        objectMapper = new ObjectMapper();
     }
 
     @Test
-    void testToDto_WithValidEntity() throws Exception {
+    void testToDto_WithValidEntity() {
         // Given
         CodesListEntity codesListEntity = new CodesListEntity();
         UUID testId = UUID.randomUUID();
@@ -39,8 +35,8 @@ class CodesListMapperTest {
         externalLink.setVersion("v1");
         codesListEntity.setCodesListExternalLink(externalLink);
 
-        JsonNode searchConfig = objectMapper.readTree("{\"enabled\": true}");
-        JsonNode content = objectMapper.readTree("[{\"code\": \"01\"}]");
+        Map<String,Object> searchConfig = Map.of("enabled", true);
+        List<Map<String,Object>> content = List.of(Map.of("code", "01"));
 
         codesListEntity.setSearchConfiguration(searchConfig);
         codesListEntity.setContent(content);
@@ -57,12 +53,14 @@ class CodesListMapperTest {
         assertEquals("v1", dto.metadata().version());
         assertNotNull(dto.metadata().externalLink());
         assertEquals("ExternalLink1", dto.metadata().externalLink().id());
-        assertTrue(dto.searchConfiguration().get("enabled").asBoolean());
-        assertEquals("01", dto.content().get(0).get("code").asText());
+
+        assertNotNull(dto.searchConfiguration());
+        assertEquals(true, dto.searchConfiguration().get("enabled"));
+        assertEquals("01", dto.content().getFirst().get("code"));
     }
 
     @Test
-    void testToEntity_WithValidDto() throws Exception {
+    void testToEntity_WithValidDto() {
         // Given
         String testId1 = UUID.randomUUID().toString();
         UUID testId2 = UUID.randomUUID();
@@ -71,8 +69,8 @@ class CodesListMapperTest {
 
         MetadataDto metadata = new MetadataDto(testId2, "Label2", "v2", externalLink);
 
-        JsonNode searchConfig = objectMapper.readTree("{\"enabled\": false}");
-        JsonNode content = objectMapper.readTree("[{\"code\": \"01\"}]");
+        Map<String,Object> searchConfig = Map.of("enabled", false);
+        List<Map<String,Object>> content = List.of(Map.of("code", "01"));
 
         CodesListDto dto = new CodesListDto(testId2, metadata, searchConfig, content);
 
@@ -84,5 +82,8 @@ class CodesListMapperTest {
         assertEquals(testId2, entity.getId());
         assertEquals("Label2", entity.getLabel());
         assertEquals("v2", entity.getVersion());
+        // searchConfiguration and content are not set in toEntity()
+        assertNull(entity.getSearchConfiguration());
+        assertNull(entity.getContent());
     }
 }
